<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeMenuItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/discoverMenuItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/discover_icon"
        android:title="@string/discover" />

    <item
        android:id="@+id/messageMenuItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/message_icon"
        android:title="@string/message" />

    <item
        android:id="@+id/profileMenuItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />

</menu>